--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
 		<div class="principal">
 <div class="fotografia">
  <a href="C:\Users\Alumno\Desktop\Meh\50m1-8.html" style="text-decoration: none; color :black;">50mm f1.8</a> </div>
-<div class="equipo"> <a href="C:\Users\Alumno\Desktop\Meh\equipo.html" style="text-decoration: none; color :black;">Equipo</a> </div>
+<div class="equipo"> <a href="AfedoCF18.github.io/equipo.html
+" style="text-decoration: none; color :black;">Equipo</a> </div>
 <div class="evento"> <a href="C:\Users\Alumno\Desktop\Meh\evento.html" style="text-decoration: none; color: black;">Tutoriales</a> </div>
 <div class="edificio"> <a href="https://www.eyeem.com/u/lynding" target="_blank"; style="text-decoration: none; color :black;">Portafolio</a> </div>
 </div>
