--- a/evento.html
+++ b/evento.html
@@ -123,7 +123,7 @@
 <body>
 	<body style="background-color: #333333">
 		<div class="principal">
-			<div class="inicio"> <a href="C:\Users\Alumno\Desktop\Meh\index.html" style="text-decoration: none; color :black;"> Inicio </a> </div>
+			<div class="inicio"> <a href="AfedoCF18.github.io/index.html" style="text-decoration: none; color :black;"> Inicio </a> </div>
 <div class="equipo"> <a href="AfedoCF18.github.io/equipo.html" style="text-decoration: none; color :black;">50mm f/1.8</a> </div>
 <div class="evento"> <a href="C:\Users\Alumno\Desktop\Meh\evento.html" style="text-decoration: none; color: black;">Equipo</a> </div>
 <div class="edificio"> <a href="https://www.eyeem.com/u/lynding" target="_blank"; style="text-decoration: none; color :black;">Portafolio</a> </div>
