--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 	<body style="background-color: #333333">
 		<div class="principal">
 <div class="fotografia">
- <a href="C:\Users\Alumno\Desktop\Meh\50m1-8.html" style="text-decoration: none; color :black;">50mm f1.8</a> </div>
+ <a href="AfedoCF18.github.io/50m1-8.html" style="text-decoration: none; color :black;">50mm f1.8</a> </div>
 <div class="equipo"> <a href="AfedoCF18.github.io/equipo.html
 " style="text-decoration: none; color :black;">Equipo</a> </div>
 <div class="evento"> <a href="C:\Users\Alumno\Desktop\Meh\evento.html" style="text-decoration: none; color: black;">Tutoriales</a> </div>
