--- a/50m1-8.html
+++ b/50m1-8.html
@@ -93,7 +93,7 @@
 		<div class="principal">
 			<div class="inicio"> <a href="AfedoCF18.github.io/index.html" style="text-decoration: none; color :black;"> Inicio </a> </div>
 <div class="equipo"> <a href="AfedoCF18.github.io\equipo.html" style="text-decoration: none; color :black;">Equipo</a> </div>
-<div class="evento"> <a href="C:\Users\Alumno\Desktop\Meh\evento.html" style="text-decoration: none; color: black;">Tutoriales</a> </div>
+<div class="evento"> <a href="AfedoCF18.github.io/evento.html" style="text-decoration: none; color: black;">Tutoriales</a> </div>
 <div class="edificio"> <a href="https://www.eyeem.com/u/lynding" target="_blank"; style="text-decoration: none; color :black;">Portafolio</a> </div>
 </div>
 <div class="mejor50mm"> ¿Mi objetivo preferido? </div>
