--- a/equipo.html
+++ b/equipo.html
@@ -179,8 +179,8 @@
     	<body style="background-color: #333333;">
     		<div class="principal">
     			<div class="inicio"> <a href="AfedoCF18.github.io/index.html" style="text-decoration: none; color :black;"> Inicio </a> </div>
-<div class="equipo"> <a href="C:\Users\Alumno\Desktop\Meh\equipo.html" style="text-decoration: none; color :black;">50MM f/1.8</a> </div>
-<div class="evento"> <a href="C:\Users\Alumno\Desktop\Meh\evento.html" style="text-decoration: none; color: black;">Tutoriales</a> </div>
+<div class="equipo"> <a href="AfedoCF18.github.io/equipo.html" style="text-decoration: none; color :black;">50MM f/1.8</a> </div>
+<div class="evento"> <a href="AfedoCF18.github.io/evento.html" style="text-decoration: none; color: black;">Tutoriales</a> </div>
 <div class="edificio"> <a href="https://www.eyeem.com/u/lynding" target="_blank"; style="text-decoration: none; color :black;">Portafolio</a> </div>
 </div>
 <center>
