--- a/equipo.html
+++ b/equipo.html
@@ -178,9 +178,9 @@
     <body>
     	<body style="background-color: #333333;">
     		<div class="principal">
-    			<div class="inicio"> <a href="AfedoCF18.github.io/index.html" style="text-decoration: none; color :black;"> Inicio </a> </div>
-<div class="equipo"> <a href="AfedoCF18.github.io/equipo.html" style="text-decoration: none; color :black;">50MM f/1.8</a> </div>
-<div class="evento"> <a href="AfedoCF18.github.io/evento.html" style="text-decoration: none; color: black;">Tutoriales</a> </div>
+    			<div class="inicio"> <a href="index.html" style="text-decoration: none; color :black;"> Inicio </a> </div>
+<div class="equipo"> <a href="equipo.html" style="text-decoration: none; color :black;">50MM f/1.8</a> </div>
+<div class="evento"> <a href="evento.html" style="text-decoration: none; color: black;">Tutoriales</a> </div>
 <div class="edificio"> <a href="https://www.eyeem.com/u/lynding" target="_blank"; style="text-decoration: none; color :black;">Portafolio</a> </div>
 </div>
 <center>
