--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
 	<body style="background-color: #333333">
 		<div class="principal">
 <div class="fotografia">
- <a href="AfedoCF18.github.io/50m1-8.html" style="text-decoration: none; color :black;">50mm f1.8</a> </div>
-<div class="equipo"> <a href="AfedoCF18.github.io/equipo.html
+ <a href="50m1-8.html" style="text-decoration: none; color :black;">50mm f1.8</a> </div>
+<div class="equipo"> <a href="equipo.html
 " style="text-decoration: none; color :black;">Equipo</a> </div>
-<div class="evento"> <a href="AfedoCF18.github.io/evento.html" style="text-decoration: none; color: black;">Tutoriales</a> </div>
+<div class="evento"> <a href="evento.html" style="text-decoration: none; color: black;">Tutoriales</a> </div>
 <div class="edificio"> <a href="https://www.eyeem.com/u/lynding" target="_blank"; style="text-decoration: none; color :black;">Portafolio</a> </div>
 </div>
 </div>
