--- a/PracticasBootstrap/PracticaBootstrap6.html
+++ b/PracticasBootstrap/PracticaBootstrap6.html
@@ -72,6 +72,6 @@
 <hr>
 <div class="text-center">Desarrollo de Ap. Wep &copy;  2018</div>
 
-      <script src="js/Bootstrap.js""></script>
+      <script src="js/js/bootstrap.js""></script>
 </body>
 </html>
