--- a/PracticasBootstrap/PracticaBootstrap6.html
+++ b/PracticasBootstrap/PracticaBootstrap6.html
@@ -13,7 +13,7 @@
 		<button class="btn btn-primary btn-lg">
     <span class="glyphicon glyphicon-glass" aria-hidden="true" style="color: #E807EC;"></span>
     <font face="Comic Sans MS,arial,verdana"></font>
-   <font color="#000000"> Botón</font>
+   <font color="#000000"> BotÃ³n</font>
       
 		</button>
 		<button class="btn btn-success  btn-lg">
@@ -41,15 +41,3 @@
 </body>
 </html>
 
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-<script src="js/bootstrap.js"></script>
-</body>
-</html>
