--- a/ProyectowepGerardo/paginaprincipal.html
+++ b/ProyectowepGerardo/paginaprincipal.html
@@ -87,7 +87,7 @@ body{
 </head>
 <body>
 	<div>
-		<a href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/paginaprincipal.html"> <img class="back" src="descarga.jpg"></a>
+		<a href="https://afedocf18.github.io/ProyectowepGerardo/paginaprincipal.html"> <img class="back" src="descarga.jpg"></a>
 	</div>
 	
 	<div class="menu">
