--- a/ProyectowepGerardo/Nismo.html
+++ b/ProyectowepGerardo/Nismo.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 	<div>
-		<a href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/TheNissanCompany.html"><img src="descarga.jpg"></a>
+		<a href="https://afedocf18.github.io/ProyectowepGerardo/paginaprincipal.html"><img src="descarga.jpg"></a>
 		
 	</div>
 	<h1>NISSAN nismo</h1>
