--- a/ProyectowepGerardo/NissanSeR.html
+++ b/ProyectowepGerardo/NissanSeR.html
@@ -42,7 +42,7 @@
 </head>
 <body>
 	<div>
-		<a href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/TheNissanCompany.html"><img src="descarga.jpg"></a>
+		<a href="https://afedocf18.github.io/ProyectowepGerardo/paginaprincipal.html"><img src="descarga.jpg"></a>
 		
 	</div>
 	<div><img class="img2" src="LOG644(1).jpg"></div>
