--- a/ProyectowepGerardo/nissan sr20.html
+++ b/ProyectowepGerardo/nissan sr20.html
@@ -61,16 +61,16 @@
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active">
-          <a href="https://afedocf18.github.io/ProyectowepGerardo/paginaprincipal.html">Modificaciones <span class="sr-only">(current)</span></a></li>
+          <a href="https://afedocf18.github.io/ProyectowepGerardo/modificaciones.html">Modificaciones <span class="sr-only">(current)</span></a></li>
         
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tipos de motor SR20 <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a class="aDEL" href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/SR20DE.html">SR20DEL</a></li>
-            <li><a class="aDEH" href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/SR20DEH.html">SR20DEH</a></li>
-            <li><a class="aVVL" href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/SR20VVL.html">SR20VVL</a></li>
-            <li><a class="aDET" href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/SR20DET.html">SR20DET</a></li>
-            <li><a class="aVET" href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/SR20VET.html">SR20VET</a></li>
+            <li><a class="aDEL" href="https://afedocf18.github.io/ProyectowepGerardo/SR20DE.html">SR20DEL</a></li>
+            <li><a class="aDEH" href="https://afedocf18.github.io/ProyectowepGerardo/SR20DEH.html">SR20DEH</a></li>
+            <li><a class="aVVL" href="https://afedocf18.github.io/ProyectowepGerardo/SR20VVL.html">SR20VVL</a></li>
+            <li><a class="aDET" href="https://afedocf18.github.io/ProyectowepGerardo/SR20DET.html">SR20DET</a></li>
+            <li><a class="aVET" href="https://afedocf18.github.io/ProyectowepGerardo/SR20VET.html">SR20VET</a></li>
             
           </ul>
         </li>
@@ -97,7 +97,7 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-      <a class="a4" href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/TheNissanCompany.html"><img src="descarga.jpg"></a>
+      <a class="a4" href="https://afedocf18.github.io/ProyectowepGerardo/paginaprincipal.html"><img src="descarga.jpg"></a>
 
             <h1>NISSAN SR20</h1>
             <p class="pinfo">El motor Nissan SR es un motor de gasolina de combustión interna de 4 tiempos, 1.6 L, 1.8 L o 2.0 L, fabricado por Nissan Motors. Cuenta con una cabeza y bloque de aluminio con mangas de acero y cuenta con un diseño DOHC de 4 válvulas, con sincronización variable de válvulas en modelos selectos. El motor se usó en muchos vehículos pequeños o medianos de Nissan, incluidas las variantes turbocargadas de alto rendimiento. Fue diseñado por Nissan como reemplazo de la anterior serie de motores CA. La potencia de salida mostrada es JIS Net PS o ECE Netowowatts a menos que se indique lo contrario.</p>
