--- a/ProyectowepGerardo/SR20DE.html
+++ b/ProyectowepGerardo/SR20DE.html
@@ -76,7 +76,7 @@
 </nav>
       <a class="a4" href="https://afedocf18.github.io/ProyectowepGerardo/paginaprincipal.html"><img src="descarga.jpg"></a>
 
-	<a class="a7" href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/nissan%20sr20.html?"><img class="imgsr20" src="flat,800x800,075,f.jpg"></a>
+	<a class="a7" href="https://afedocf18.github.io/ProyectowepGerardo/nissan%20sr20.html"><img class="imgsr20" src="flat,800x800,075,f.jpg"></a>
 	<h1>NISSAN SR20DEL <img class="imgde" src="flat,800x800,075,f.u12.jpg"></h1>
 		<p class="pinfo">
 El motor Nissan SR20DE se utilizó en más de 15 modelos de Nissan. Apareció por primera vez en octubre de 1989, y con el tiempo se eliminó gradualmente con la introducción de la familia de motores QR (bajas emisiones). El SR20DE llevaba valores nominales de potencia entre 128 y 160 caballos de fuerza (96 a 120 kW) de fábrica.</p>
