--- a/ProyectowepGerardo/SR20DEH.html
+++ b/ProyectowepGerardo/SR20DEH.html
@@ -39,16 +39,16 @@
 	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active">
-        	<a href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/modificaciones.html">Modificaciones <span class="sr-only">(current)</span></a></li>
+          <a href="https://afedocf18.github.io/ProyectowepGerardo/modificaciones.html">Modificaciones <span class="sr-only">(current)</span></a></li>
         
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tipos de motor SR20 <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a class="aDEL" href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/SR20DE.html">SR20DEL</a></li>
-            <li><a class="aDEH" href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/SR20DEH.html">SR20DEH</a></li>
-            <li><a class="aVVL" href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/SR20VVL.html">SR20VVL</a></li>
-            <li><a class="aDET" href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/SR20DET.html">SR20DET</a></li>
-            <li><a class="aVET" href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/SR20VET.html">SR20VET</a></li>
+            <li><a class="aDEL" href="https://afedocf18.github.io/ProyectowepGerardo/SR20DE.html">SR20DEL</a></li>
+            <li><a class="aDEH" href="https://afedocf18.github.io/ProyectowepGerardo/SR20DEH.html">SR20DEH</a></li>
+            <li><a class="aVVL" href="https://afedocf18.github.io/ProyectowepGerardo/SR20VVL.html">SR20VVL</a></li>
+            <li><a class="aDET" href="https://afedocf18.github.io/ProyectowepGerardo/SR20DET.html">SR20DET</a></li>
+            <li><a class="aVET" href="https://afedocf18.github.io/ProyectowepGerardo/SR20VET.html">SR20VET</a></li>
             
           </ul>
         </li>
@@ -57,10 +57,10 @@
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default">Buscar</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
+        <li><a href="#">Ayuda</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -75,11 +75,10 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+      <a class="a4" href="https://afedocf18.github.io/ProyectowepGerardo/paginaprincipal.html"><img src="descarga.jpg"></a>
 
-	<a class="a4" href="https://afedocf18.github.io/ProyectowepGerardo/paginaprincipal.html"><img src="descarga.jpg"></a>
-
-	<a class="a7" href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/nissan%20sr20.html?"><img class="imgsr20" src="flat,800x800,075,f.jpg"></a>
-	<h1> NISSAN SR20DEH <img class="imgde" src="flat,800x800,075,f.u12.jpg"></h1>
+	<a class="a7" href="https://afedocf18.github.io/ProyectowepGerardo/nissan%20sr20.html"><img class="imgsr20" src="flat,800x800,075,f.jpg"></a>
+	<h1>NISSAN SR20DEL <img class="imgde" src="flat,800x800,075,f.u12.jpg"></h1>
 	<p class="pinfo">El motor Nissan SR20DE se utilizó en más de 15 modelos de Nissan. Apareció por primera vez en octubre de 1989, y con el tiempo se eliminó gradualmente con la introducción de la familia de motores QR (bajas emisiones). El SR20DE llevaba valores nominales de potencia entre 128 y 160 caballos de fuerza (96 a 120 kW) de fábrica.
 	<br>
 	El motor SR20DEH a diferencia del motor SR20DEL es que cuenta con un poco más de caballos de fuerza, el motor SR20DEH tiene la admisión de aire ubicada debajo de los inyectores a diferiencia del SR20DEL que tiene la admisión de aire arriba de los inyectores.
