--- a/ProyectowepGerardo/SR20DET.html
+++ b/ProyectowepGerardo/SR20DET.html
@@ -40,16 +40,16 @@
 	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active">
-        	<a href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/modificaciones.html">Modificaciones <span class="sr-only">(current)</span></a></li>
+          <a href="https://afedocf18.github.io/ProyectowepGerardo/modificaciones.html">Modificaciones <span class="sr-only">(current)</span></a></li>
         
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tipos de motor SR20 <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a class="aDEL" href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/SR20DE.html">SR20DEL</a></li>
-            <li><a class="aDEH" href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/SR20DEH.html">SR20DEH</a></li>
-            <li><a class="aVVL" href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/SR20VVL.html">SR20VVL</a></li>
-            <li><a class="aDET" href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/SR20DET.html">SR20DET</a></li>
-            <li><a class="aVET" href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/SR20VET.html">SR20VET</a></li>
+            <li><a class="aDEL" href="https://afedocf18.github.io/ProyectowepGerardo/SR20DE.html">SR20DEL</a></li>
+            <li><a class="aDEH" href="https://afedocf18.github.io/ProyectowepGerardo/SR20DEH.html">SR20DEH</a></li>
+            <li><a class="aVVL" href="https://afedocf18.github.io/ProyectowepGerardo/SR20VVL.html">SR20VVL</a></li>
+            <li><a class="aDET" href="https://afedocf18.github.io/ProyectowepGerardo/SR20DET.html">SR20DET</a></li>
+            <li><a class="aVET" href="https://afedocf18.github.io/ProyectowepGerardo/SR20VET.html">SR20VET</a></li>
             
           </ul>
         </li>
@@ -58,10 +58,10 @@
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default">Buscar</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
+        <li><a href="#">Ayuda</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -76,11 +76,10 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-	<a class="a4" href="https://afedocf18.github.io/ProyectowepGerardo/paginaprincipal.html"><img src="descarga.jpg"></a>
+      <a class="a4" href="https://afedocf18.github.io/ProyectowepGerardo/paginaprincipal.html"><img src="descarga.jpg"></a>
 
-	<a class="a7" href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/nissan%20sr20.html?"><img class="imgsr20" src="flat,800x800,075,f.jpg"></a>
-	<h1>NISSAN SR20DET<img class="imgdet" src="flat,800x800,075,f.u12 (1).jpg"></h1>
-	
+	<a class="a7" href="https://afedocf18.github.io/ProyectowepGerardo/nissan%20sr20.html"><img class="imgsr20" src="flat,800x800,075,f.jpg"></a>
+	<h1>NISSAN SR20DEL <img class="imgde" src="flat,800x800,075,f.u12.jpg"></h1>
 	<p class="pinfo">
 El SR20DET se produjo por primera vez en el U12 Nissan Bluebird 2000SSS Attesa en octubre de 1989. Desde 1990 hasta 1994 se utilizó en el Nissan Pulsar GTi-R (RNN14) sin embargo, con un T28 turbo más grande. En ambos coches, el motor está alineado de forma transversal.
 
