--- a/ProyectowepGerardo/paginaprincipal.html
+++ b/ProyectowepGerardo/paginaprincipal.html
@@ -91,11 +91,11 @@ body{
 	</div>
 	
 	<div class="menu">
-		<a href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/Nismo.html"><img class="nismo" src="descarga.png"></a>
-		<a href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/NissanSeR.html">
+		<a href="https://afedocf18.github.io/ProyectowepGerardo/Nismo.html"><img class="nismo" src="descarga.png"></a>
+		<a href="https://afedocf18.github.io/ProyectowepGerardo/NissanSeR.html">
 		<img class="ser" src="LOG644(1).jpg"></a>
-		<a href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/NissanGTR.html"><img class="GTR" src="GT-R_Logo.png"></a>
-		<a href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/nissan%20sr20.html"><img class="sr20" src="flat,800x800,075,f.jpg"></a>
+		<a href="https://afedocf18.github.io/ProyectowepGerardo/NissanGTR.html"><img class="GTR" src="GT-R_Logo.png"></a>
+		<a href="https://afedocf18.github.io/ProyectowepGerardo/nissan%20sr20.html"><img class="sr20" src="flat,800x800,075,f.jpg"></a>
 		
 	</div>
 	<div class="ex">
