--- a/ProyectowepGerardo/modificaciones.html
+++ b/ProyectowepGerardo/modificaciones.html
@@ -309,7 +309,7 @@
 </nav>
       <a class="a4" href="https://afedocf18.github.io/ProyectowepGerardo/paginaprincipal.html"><img src="descarga.jpg"></a>
 
-	
+	<a class="a7" href="https://afedocf18.github.io/ProyectowepGerardo/nissan%20sr20.html"><img class="imgsr20" src="flat,800x800,075,f.jpg"></a>
 	
 
 	<h4 class="h4turbo">
