--- a/ProyectowepGerardo/SR20VVL.html
+++ b/ProyectowepGerardo/SR20VVL.html
@@ -77,7 +77,7 @@
 </nav>
       <a class="a4" href="https://afedocf18.github.io/ProyectowepGerardo/paginaprincipal.html"><img src="descarga.jpg"></a>
 
-	<a class="a7" href="https://afedocf18.github.io/ProyectowepGerardo/nissan%20sr20.html"><img class="imgsr20" src="CnpZtQlWAAAqbUU.jpg"></a>
+	<a class="a7" href="https://afedocf18.github.io/ProyectowepGerardo/nissan%20sr20.html"><img class="imgsr20" src="flat,800x800,075,f.jpg"></a>
 
 	<p class="pinfo">El 2.0 L SR20VE tiene sincronización de válvula variable Neo VVL de Nissan con control de elevación. Produce 190 PS (139 kW) a 7000 rpm y 144 lb · ft (196 Nm) a 6000 rpm y más tarde (2001-2003) a 205 PS (150 kW) a 7200 rpm y 206 nm a 5200. Se utiliza en:
 
