--- a/ProyectowepGerardo/SR20VET.html
+++ b/ProyectowepGerardo/SR20VET.html
@@ -80,7 +80,7 @@
       <a class="a4" href="https://afedocf18.github.io/ProyectowepGerardo/paginaprincipal.html"><img src="descarga.jpg"></a>
 
 	<a class="a7" href="https://afedocf18.github.io/ProyectowepGerardo/nissan%20sr20.html"><img class="imgsr20" src="flat,800x800,075,f.jpg"></a>
-	<h1>NISSAN SR20DEL <img class="imgvet" src="il_340x270.1192602011_a28d.jpg"></h1>
+	<h1>NISSAN SR20VET <img class="imgvet" src="il_340x270.1192602011_a28d.jpg"></h1>
 		<p class="pinfo">Disponible solo en el mercado japonés es el 2.0 L (1998 cc) SR20VET fue el primer motor turbocargado de Nissan con sincronización variable y control de elevación. Produce 280 CV (206 kW) a 6400 rpm y 309 nm a 3200 rpm con una relación de compresión de 9.0: 1.
 
 Se usa en los siguientes vehículos:
