--- a/ProyectowepGerardo/SR20DET.html
+++ b/ProyectowepGerardo/SR20DET.html
@@ -79,7 +79,7 @@
       <a class="a4" href="https://afedocf18.github.io/ProyectowepGerardo/paginaprincipal.html"><img src="descarga.jpg"></a>
 
 	
-	<h1>NISSAN SR20DEL <img class="imgdet" src="flat,800x800,075,f.u12 (1).jpg"></h1>
+	<h1>NISSAN SR20DET <img class="imgdet" src="flat,800x800,075,f.u12 (1).jpg"></h1>
 	<p class="pinfo">
 El SR20DET se produjo por primera vez en el U12 Nissan Bluebird 2000SSS Attesa en octubre de 1989. Desde 1990 hasta 1994 se utilizó en el Nissan Pulsar GTi-R (RNN14) sin embargo, con un T28 turbo más grande. En ambos coches, el motor está alineado de forma transversal.
 
