--- a/ProyectowepGerardo/SR20DEH.html
+++ b/ProyectowepGerardo/SR20DEH.html
@@ -78,7 +78,7 @@
       <a class="a4" href="https://afedocf18.github.io/ProyectowepGerardo/paginaprincipal.html"><img src="descarga.jpg"></a>
 
 	<a class="a7" href="https://afedocf18.github.io/ProyectowepGerardo/nissan%20sr20.html"><img class="imgsr20" src="flat,800x800,075,f.jpg"></a>
-	<h1>NISSAN SR20DEL <img class="imgde" src="flat,800x800,075,f.u12.jpg"></h1>
+	<h1>NISSAN SR20DEH <img class="imgde" src="flat,800x800,075,f.u12.jpg"></h1>
 	<p class="pinfo">El motor Nissan SR20DE se utilizó en más de 15 modelos de Nissan. Apareció por primera vez en octubre de 1989, y con el tiempo se eliminó gradualmente con la introducción de la familia de motores QR (bajas emisiones). El SR20DE llevaba valores nominales de potencia entre 128 y 160 caballos de fuerza (96 a 120 kW) de fábrica.
 	<br>
 	El motor SR20DEH a diferencia del motor SR20DEL es que cuenta con un poco más de caballos de fuerza, el motor SR20DEH tiene la admisión de aire ubicada debajo de los inyectores a diferiencia del SR20DEL que tiene la admisión de aire arriba de los inyectores.
