--- a/ProyectowepGerardo/SR20DET.html
+++ b/ProyectowepGerardo/SR20DET.html
@@ -77,7 +77,7 @@
   </div><!-- /.container-fluid -->
 </nav>
       <a class="a4" href="https://afedocf18.github.io/ProyectowepGerardo/paginaprincipal.html"><img src="descarga.jpg"></a>
-
+<a class="a7" href="https://afedocf18.github.io/ProyectowepGerardo/nissan%20sr20.html?"><img class="imgsr20" src="flat,800x800,075,f.jpg"></a>
 	
 	<h1>NISSAN SR20DET <img class="imgdet" src="flat,800x800,075,f.u12 (1).jpg"></h1>
 	<p class="pinfo">
