--- a/ProyectowepGerardo/paginaprincipal.html
+++ b/ProyectowepGerardo/paginaprincipal.html
@@ -10,7 +10,9 @@
 	<style>
 	
 body{
+	position:relative;
 	width: 500px;
+	left:200px;
 	
 	}
 		.back{
@@ -20,9 +22,9 @@ body{
 		}
 		.form{
 			position: relative;
-			width: 350px;
-			left: 1000px;
-			top: -500px;
+			width: 500px;
+			left: 1100px;
+			top: -600px;
 		}
 		
 		}
