--- a/ProyectowepGerardo/NissanGTR.html
+++ b/ProyectowepGerardo/NissanGTR.html
@@ -32,7 +32,10 @@
 			top: -293px;
 
 		}
-
+		.adorno{
+		position:relative;
+		width:300px;
+		}
 	</style>
 </head>
 <body>
@@ -52,7 +55,7 @@ Dos prototipos fueron exhibidos en ferias de automóviles antes de que fuera pre
 Como es legado de sus antecesores, el Nissan GT-R R35 ha salido en numerosos videojuegos, como Forza Motorsport, Gran Turismo, Need for Speed y Películas de la Saga Fast and Furious.
 
 La versión de producción del GT-R se estrenó en el Salón del Automóvil de Tokio el 6 de diciembre de 2007, siendo su lanzamiento en el mercado japonés. El lanzamiento oficial en los EE.UU. fue 7 meses más tarde, el 7 de julio de 2008. El lanzamiento en Canadá también fue en julio de ese mismo año. Europa se convirtió en el tercer mercado de consumo. La gran disparidad en la comercialización inicial entre estas emisiones regionales se debe a que Nissan debió construir centros de desempeño donde el coche cuente con los servicios necesarios.</p>
-
+<img class="adorno">
 <script src="js/bootstrap.js"></script>
 </body>
 </html>
