--- a/ProyectowepGerardo/NissanGTR.html
+++ b/ProyectowepGerardo/NissanGTR.html
@@ -8,14 +8,19 @@
 	<title>NISSAN GTR</title>
 
 	<style>
-		body{ background-color: blue;
+		
+		body{ 
+background-color: blue;
+width:1000px;
 
 		}
 		h1{
 			position: relative;
 			text-align: center;
 			color: white;
-			left: 300px;
+			left: 239px;
+			top:130px;
+			
 		}
 		iframe{
 			position: relative;
@@ -26,15 +31,17 @@
 			position: relative;
 			color: white;
 			font-family: times new roman;
-			font-size: 16px;
-			width: 700px;
+			font-size: 20px;
+			width: 950px;
 			left: 630px;
-			top: -293px;
+			top: -196px;
 
 		}
 		.adorno{
 		position:relative;
-		width:300px;
+		width:900px;
+		top:-1000px;
+		Left:1000px;;
 		}
 	</style>
 </head>
