--- a/ProyectowepGerardo/NissanGTR.html
+++ b/ProyectowepGerardo/NissanGTR.html
@@ -63,6 +63,54 @@ Como es legado de sus antecesores, el Nissan GT-R R35 ha salido en numerosos vid
 
 La versión de producción del GT-R se estrenó en el Salón del Automóvil de Tokio el 6 de diciembre de 2007, siendo su lanzamiento en el mercado japonés. El lanzamiento oficial en los EE.UU. fue 7 meses más tarde, el 7 de julio de 2008. El lanzamiento en Canadá también fue en julio de ese mismo año. Europa se convirtió en el tercer mercado de consumo. La gran disparidad en la comercialización inicial entre estas emisiones regionales se debe a que Nissan debió construir centros de desempeño donde el coche cuente con los servicios necesarios.</p>
 	<img class="adorno" src="06.png">
+	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+    
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="gtrduck_front_profile_1024x1024.jpg" alt="...">
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+    <div class="item">
+      <img src="gtrduck_side_profile_1024x1024.jpg" alt="...">
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+    <div class="item">
+      <img src="zcom-media-sites-a0ie000000gdpymial-media-import-rocket_bunny-pandem-full-widebody-aero-kit-wo-gt-wing-nissan-gtr-r-35-dsg-performance_1.jpg" alt="...">
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+    <div class="item">
+      <img src="r35-1.jpg" alt="...">
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+   
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/TheNissanCompany.html#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="file:///C:/Users/LGGG1/Desktop/ProyectowepGerardo/TheNissanCompany.html#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 <script src="js/bootstrap.js"></script>
 </body>
 </html>
