--- a/ProyectowepGerardo/NissanGTR.html
+++ b/ProyectowepGerardo/NissanGTR.html
@@ -43,6 +43,12 @@ width:1000px;
 		top:-1000px;
 		Left:1000px;;
 		}
+		.divmm{
+position:relative;
+top:-600px;
+left:400px;
+
+}
 	</style>
 </head>
 <body>
@@ -63,6 +69,7 @@ Como es legado de sus antecesores, el Nissan GT-R R35 ha salido en numerosos vid
 
 La versión de producción del GT-R se estrenó en el Salón del Automóvil de Tokio el 6 de diciembre de 2007, siendo su lanzamiento en el mercado japonés. El lanzamiento oficial en los EE.UU. fue 7 meses más tarde, el 7 de julio de 2008. El lanzamiento en Canadá también fue en julio de ese mismo año. Europa se convirtió en el tercer mercado de consumo. La gran disparidad en la comercialización inicial entre estas emisiones regionales se debe a que Nissan debió construir centros de desempeño donde el coche cuente con los servicios necesarios.</p>
 	<img class="adorno" src="06.png">
+	<div class="divmm">
 	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
@@ -111,6 +118,7 @@ La versión de producción del GT-R se estrenó en el Salón del Automóvil de T
     <span class="sr-only">Next</span>
   </a>
 </div>
+		</div>
 <script src="js/bootstrap.js"></script>
 </body>
 </html>
