--- a/ProyectowepGerardo/NissanGTR.html
+++ b/ProyectowepGerardo/NissanGTR.html
@@ -11,45 +11,69 @@
 		
 		body{ 
 background-color: blue;
-width:1000px;
 
 		}
 		h1{
 			position: relative;
 			text-align: center;
 			color: white;
-			left: 239px;
-			top:130px;
+			top: 320px;
+			left: 1.1s%;
+
 			
 		}
 		iframe{
 			position: relative;
-			left: 20px;
-			top: 30px;
+			
 		}
 		.pgtr{
 			position: relative;
 			color: white;
 			font-family: times new roman;
-			font-size: 20px;
-			width: 950px;
-			left: 630px;
-			top: -196px;
+			font-size: 150%;
+			width: 57%;
+			left: 43%;
+
+			
+
 
 		}
 		.adorno{
 		position:relative;
-		width:900px;
-		top:-1000px;
-		Left:1000px;;
+		top: -1050px;
+		left: 40%;
+		width: 60%;
+		
+
 		}
 		.divmm{
 position:relative;
-top:-600px;
-left:400px;
+top: -450px;
+
+
 
 }
+	.g1{
+		position: relative;
+		width: 800px;
+		left:22%;
+	}
+	.g2{
+		position: relative;
+		left: 22%;
+	}
+	.g3{
+		position: relative;
+		left: 22%;
+	}
+	.g4{
+		position: relative;
+		width: 800px;
+		left: 21%;
+	}
+
 	</style>
+
 </head>
 <body>
 	<div>
@@ -83,25 +107,25 @@ La versión de producción del GT-R se estrenó en el Salón del Automóvil de T
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="gtrduck_front_profile_1024x1024.jpg" alt="...">
+      <img class="g1" src="gtrduck_front_profile_1024x1024.jpg" alt="...">
       <div class="carousel-caption">
         ...
       </div>
     </div>
     <div class="item">
-      <img src="gtrduck_side_profile_1024x1024.jpg" alt="...">
+      <img class="g2" src="gtrduck_side_profile_1024x1024.jpg" alt="...">
       <div class="carousel-caption">
         ...
       </div>
     </div>
     <div class="item">
-      <img src="zcom-media-sites-a0ie000000gdpymial-media-import-rocket_bunny-pandem-full-widebody-aero-kit-wo-gt-wing-nissan-gtr-r-35-dsg-performance_1.jpg" alt="...">
+      <img class="g3" src="zcom-media-sites-a0ie000000gdpymial-media-import-rocket_bunny-pandem-full-widebody-aero-kit-wo-gt-wing-nissan-gtr-r-35-dsg-performance_1.jpg" alt="...">
       <div class="carousel-caption">
         ...
       </div>
     </div>
     <div class="item">
-      <img src="r35-1.jpg" alt="...">
+      <img class="g4" src="r35-1.jpg" alt="...">
       <div class="carousel-caption">
         ...
       </div>
