--- a/ProyectowepGerardo/paginaprincipal.html
+++ b/ProyectowepGerardo/paginaprincipal.html
@@ -11,8 +11,8 @@
 	
 body{
 	position:relative;
-	width: 500px;
-	left:200px;
+	top: 50px;
+	
 	
 	}
 		.back{
@@ -22,9 +22,9 @@ body{
 		}
 		.form{
 			position: relative;
-			width: 500px;
-			left: 1100px;
-			top: -600px;
+			width:32% ;
+			left:66% ;
+			top: -440px;
 		}
 		
 		}
@@ -34,33 +34,33 @@ body{
 		}
 		.nismo{
 			position: relative;
-			width: 200px;
+			width: 15%;
 			left: 200px;
-			top: -100px;
+			top: -120px;
 
 		}
 		.ser{position: relative;
-			width: 160px;
+			width: 10%;
 			left: 220px;
-			top: -100px;
+			top: -120px;
 
 		}
 		.GTR{
 			position: relative;
-			width: 200px;
-			left:600px;
-			top: -260px;
+			width:13% ;
+			left:15%;
+			top:-120px; 
 
 		}
 		.sr20{
 			position: relative;
-			width: 180px;
-			left:600px;
-			top: -260px;
+			width: 12%;
+			left:14%;
+			top: -120px;
 		}
 		.yoyo{
 			position: relative;
-			top: -500px;
+			top: -420px;
 			width: 1350px;
 
 			
@@ -71,9 +71,9 @@ body{
 			font-family: times new roman;
 			font-size: 20px;
 			color: black;
-            left: 200px;
+            left:20%;
             width: 800px;
-            top: -540px;
+            top: -450px;
 	}
 	
 	
@@ -83,8 +83,48 @@ body{
 		color:blue;
 		top: -50px;
 	}
-	
+	.march{
+		position: relative;
+		left: 23%;
+		width: 57%;
+	}
+	.gtrc{
+		position: relative;
+		left: 2.5%;
+	}
+	.comunicado{
+		position: relative;
+		left: 3%;
+	}
+	.hero{
+		position: relative;
+		left: 2.5%;
+	}
+	.murano{
+		position: relative;
+		left: 2.4%;
+	}
+	.kicks{
+		position: relative;
+		left: 5.5%;
+	}
+	.frontier{
+		position: relative;
+		left: 2.45%;
+	}
+	.sentra{
+		position: relative;
+		left: 2.35%;
 
+	}
+	.xtrail{
+		position: relative;
+		left: 2.3%;
+	}
+	.posventa{
+		position: relative;
+		left: 2.4%;
+	}
 	</style>
 </head>
 <body>
@@ -125,25 +165,25 @@ body{
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item">
-      <img src="30-11-2017_15_27_07-a4f99778-4661-4642-930d-8c4cdef7be92-herobanner_hybrid_1280x540.jpg" alt="...">
+      <img class="hero" src="30-11-2017_15_27_07-a4f99778-4661-4642-930d-8c4cdef7be92-herobanner_hybrid_1280x540.jpg" alt="...">
       <div class="carousel-caption">
         ...
       </div>
     </div>
     <div class="item">
-      <img src="24-04-2018_16_51_04-2ed0726d-dd61-4827-bc29-a390f2ec741a-Murano_Home_Dekstop_sin.jpg" alt="...">
+      <img class="murano" src="24-04-2018_16_51_04-2ed0726d-dd61-4827-bc29-a390f2ec741a-Murano_Home_Dekstop_sin.jpg" alt="...">
       <div class="carousel-caption">
         ...
       </div>
     </div>
     <div class="item">
-      <img src="nissankicks.jpg" alt="...">
+      <img class="kicks" src="nissankicks.jpg" alt="...">
       <div class="carousel-caption">
         ...
       </div>
     </div>
     <div class="item">
-      <img src="maxresdefault.jpg" alt="...">
+      <img class="frontier" src="maxresdefault.jpg" alt="...">
       <div class="carousel-caption">
         ...
       </div>
@@ -155,31 +195,31 @@ body{
       </div>
     </div>
     <div class="item">
-      <img src="07-05-2018_14_20_09-2ed0726d-dd61-4827-bc29-a390f2ec741a-HERO_BANNER_Mayo_desktop.jpg" alt="...">
+      <img class="posventa" src="07-05-2018_14_20_09-2ed0726d-dd61-4827-bc29-a390f2ec741a-HERO_BANNER_Mayo_desktop.jpg" alt="...">
       <div class="carousel-caption">
         ...
       </div>
     </div>
     <div class="item">
-      <img src="08-05-2018_19_45_50-1ffb0d3b-300e-4e34-afbd-5fd4165702d6-XTRAIL-MAYO-Promo_Q1_Home.jpg" alt="...">
+      <img class="xtrail" src="08-05-2018_19_45_50-1ffb0d3b-300e-4e34-afbd-5fd4165702d6-XTRAIL-MAYO-Promo_Q1_Home.jpg" alt="...">
       <div class="carousel-caption">
         ...
       </div>
     </div>
     <div class="item">
-      <img src="30-04-2018_17_53_55-2ed0726d-dd61-4827-bc29-a390f2ec741a-Promo_Q1_Home-SENTRA-MAYO.jpg" alt="...">
+      <img class="sentra" src="30-04-2018_17_53_55-2ed0726d-dd61-4827-bc29-a390f2ec741a-Promo_Q1_Home-SENTRA-MAYO.jpg" alt="...">
       <div class="carousel-caption">
         ...
       </div>
     </div>
     <div class="item active">
-      <img class="gtr" src="2018-nissan-gtr-exterior-design-large.jpg" alt="...">
+      <img class="gtrc" class="gtr" src="2018-nissan-gtr-exterior-design-large.jpg" alt="...">
       <div class="carousel-caption">
         ...
       </div>
     </div>
     <div class="item">
-      <img src="13-02-2018_13_24_05-8af2af13-2c08-4bb8-a1a7-de1e19425889-herobanner_comunicado_1280x540_02.jpg" alt="...">
+      <img class="comunicado" src="13-02-2018_13_24_05-8af2af13-2c08-4bb8-a1a7-de1e19425889-herobanner_comunicado_1280x540_02.jpg" alt="...">
       <div class="carousel-caption">
         ...
       </div>
