--- a/ProyectowepGerardo/nissan sr20.html
+++ b/ProyectowepGerardo/nissan sr20.html
@@ -82,7 +82,7 @@
         <button type="submit" class="btn btn-default">Buscar</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Ayuda</a></li>
+        <li><a href="https://afedocf18.github.io/ProyectowepGerardo/Galeriasr20.html">Galería</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -157,7 +157,9 @@
 </div>
 </div>
 		 
+<br>
 
 <script src="js/bootstrap.js"></script>
 </body>
 </html>
+
