--- a/ProyectowepGerardo/Galeriasr20.html
+++ b/ProyectowepGerardo/Galeriasr20.html
@@ -5,9 +5,63 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/bootstrap.css">
   <script src="jquery.js"></script>
+  
+  <style>
+  .personal{
+    position: relative;
+    left: 19%;
+  }
+  .personal2{
+    position: relative;
+    left: 21%;
+  }
+  .personal3{
+    position: relative;
+    left: 35%;
+  }
+  .tuning{
+    position: relative;
+    left: 35%;
+  }
+  .sunny{
+    position: relative;
+    left: 25%;
+  }
+  .personal4{
+    position: relative;
+    left: 9.5%;
+  }
+  .personal5{
+    position: relative;
+    left: 25%;
+  }
+  h1{
+    position: relative;
+    left:40%;
+    top: -80px;
+  }
+  .sr20ba{
+    position: relative;
+    width: 15%;
+    left: 10%;
+    top: -210px;
+  }
+  .carouselslide2{
+    position: relative;
+    top: -150px;
+  }
+
+  </style>
+
   <body>
+  
+  
+  
 
 <a href="https://afedocf18.github.io/ProyectowepGerardo/paginaprincipal.html"> <img class="back" src="descarga.jpg"></a>
+<h1>Galería SR20 y QR25</h1>
+<a href="https://afedocf18.github.io/ProyectowepGerardo/nissan%20sr20.html"><img class="sr20ba" src="flat,800x800,075,f.jpg"></a>
+
 
 <div class="carouselslide2">
   <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
