--- a/ProyectowepGerardo/TheFamilyQR.html
+++ b/ProyectowepGerardo/TheFamilyQR.html
@@ -62,7 +62,8 @@
       <ul class="nav navbar-nav">
         <li class="active">
           <a href="https://afedocf18.github.io/ProyectowepGerardo/modificaciones.html">Modificaciones <span class="sr-only">(current)</span></a></li>
-          <a href="https://afedocf18.github.io/ProyectowepGerardo/TheFamilyQR.html">The Family QR <span class="sr-only">(current)</span></a></li>
+          <li class="active">
+	      <a href="https://afedocf18.github.io/ProyectowepGerardo/TheFamilyQR.html">The Family QR <span class="sr-only">(current)</span></a></li>
         
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tipos de motor SR20 <span class="caret"></span></a>
