--- a/ProyectowepGerardo/nissan sr20.html
+++ b/ProyectowepGerardo/nissan sr20.html
@@ -89,10 +89,10 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Más <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="https://afedocf18.github.io/ProyectowepGerardo/Galeriasr20.html">Galería SR20</a></li>
-            <li><a href=""></a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="https://afedocf18.github.io/ProyectowepGerardo/TheFamilyQR.html">The QR Family </a></li>
+            <li><a href="https://afedocf18.github.io/ProyectowepGerardo/GaleriaQR.html">Galería QR</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="https://afedocf18.github.io/ProyectowepGerardo/nissan%20sr20.html">NissanSR20</a></li>
           </ul>
         </li>
       </ul>
