--- a/ProyectowepGerardo/TheFamilyQR.html
+++ b/ProyectowepGerardo/TheFamilyQR.html
@@ -74,11 +74,12 @@
 		}
 	</style>
 </head>
-<body><div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+<body>
+	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active">
           <a href="https://afedocf18.github.io/ProyectowepGerardo/modificaciones.html">Modificaciones <span class="sr-only">(current)</span></a></li>
-        
+           
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tipos de motor SR20 <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -102,11 +103,11 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Más <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="https://afedocf18.github.io/ProyectowepGerardo/Galeriasr20.html">Galería</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="https://afedocf18.github.io/ProyectowepGerardo/Galeriasr20.html">Galería SR20</a></li>
+            <li><a href="https://afedocf18.github.io/ProyectowepGerardo/TheFamilyQR.html">The QR Family </a></li>
+            <li><a href="https://afedocf18.github.io/ProyectowepGerardo/GaleriaQR.html">Galería QR</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="https://afedocf18.github.io/ProyectowepGerardo/nissan%20sr20.html">NissanSR20</a></li>
           </ul>
         </li>
       </ul>
