--- a/ProyectowepGerardo/SR20VET.html
+++ b/ProyectowepGerardo/SR20VET.html
@@ -42,6 +42,8 @@
       <ul class="nav navbar-nav">
         <li class="active">
           <a href="https://afedocf18.github.io/ProyectowepGerardo/modificaciones.html">Modificaciones <span class="sr-only">(current)</span></a></li>
+           <li class="active">
+          <a href="https://afedocf18.github.io/ProyectowepGerardo/TheFamilyQR.html">The Family QR <span class="sr-only">(current)</span></a></li>
         
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tipos de motor SR20 <span class="caret"></span></a>
@@ -64,13 +66,13 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Ayuda</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Más <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="https://afedocf18.github.io/ProyectowepGerardo/Galeriasr20.html">Galería SR20</a></li>
+            <li><a href="https://afedocf18.github.io/ProyectowepGerardo/TheFamilyQR.html">The QR Family </a></li>
+            <li><a href="https://afedocf18.github.io/ProyectowepGerardo/GaleriaQR.html">Galería QR</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="https://afedocf18.github.io/ProyectowepGerardo/nissan%20sr20.html">NissanSR20</a></li>
           </ul>
         </li>
       </ul>
@@ -78,8 +80,6 @@
   </div><!-- /.container-fluid -->
 </nav>
       <a class="a4" href="https://afedocf18.github.io/ProyectowepGerardo/paginaprincipal.html"><img src="descarga.jpg"></a>
-
-	<a class="a7" href="https://afedocf18.github.io/ProyectowepGerardo/nissan%20sr20.html"><img class="imgsr20" src="flat,800x800,075,f.jpg"></a>
 	<h1>NISSAN SR20VET <img class="imgvet" src="il_340x270.1192602011_a28d.jpg"></h1>
 		<p class="pinfo">Disponible solo en el mercado japonés es el 2.0 L (1998 cc) SR20VET fue el primer motor turbocargado de Nissan con sincronización variable y control de elevación. Produce 280 CV (206 kW) a 6400 rpm y 309 nm a 3200 rpm con una relación de compresión de 9.0: 1.
 
