--- a/ProyectowepGerardo/SR20VVL.html
+++ b/ProyectowepGerardo/SR20VVL.html
@@ -40,6 +40,8 @@
       <ul class="nav navbar-nav">
         <li class="active">
           <a href="https://afedocf18.github.io/ProyectowepGerardo/modificaciones.html">Modificaciones <span class="sr-only">(current)</span></a></li>
+           <li class="active">
+          <a href="https://afedocf18.github.io/ProyectowepGerardo/TheFamilyQR.html">The Family QR <span class="sr-only">(current)</span></a></li>
         
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tipos de motor SR20 <span class="caret"></span></a>
@@ -62,13 +64,13 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Ayuda</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Más <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="https://afedocf18.github.io/ProyectowepGerardo/Galeriasr20.html">Galería SR20</a></li>
+            <li><a href="https://afedocf18.github.io/ProyectowepGerardo/TheFamilyQR.html">The QR Family </a></li>
+            <li><a href="https://afedocf18.github.io/ProyectowepGerardo/GaleriaQR.html">Galería QR</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="https://afedocf18.github.io/ProyectowepGerardo/nissan%20sr20.html">NissanSR20</a></li>
           </ul>
         </li>
       </ul>
@@ -77,7 +79,6 @@
 </nav>
       <a class="a4" href="https://afedocf18.github.io/ProyectowepGerardo/paginaprincipal.html"><img src="descarga.jpg"></a>
 
-	<a class="a7" href="https://afedocf18.github.io/ProyectowepGerardo/nissan%20sr20.html"><img class="imgsr20" src="flat,800x800,075,f.jpg"></a>
 <h1>NISSAN SR20VVL</h1>
 	<p class="pinfo">El 2.0 L SR20VE tiene sincronización de válvula variable Neo VVL de Nissan con control de elevación. Produce 190 PS (139 kW) a 7000 rpm y 144 lb · ft (196 Nm) a 6000 rpm y más tarde (2001-2003) a 205 PS (150 kW) a 7200 rpm y 206 nm a 5200. Se utiliza en:
 
