--- a/ProyectowepGerardo/Galeriasr20.html
+++ b/ProyectowepGerardo/Galeriasr20.html
@@ -99,7 +99,7 @@
   
 
 <a href="https://afedocf18.github.io/ProyectowepGerardo/paginaprincipal.html"> <img class="back" src="descarga.jpg"></a>
-<h1>Galería SR20 y QR25</h1>
+<h1>Galería SR20 </h1>
 
 
 
